syntax = "proto3";

package api.comment.v1;

option go_package = "github.com/go-microservice/moment-service/api/comment/v1;v1";
option java_multiple_files = true;
option java_package = "api.comment.v1";

service CommentService {
	rpc CreateComment (CreateCommentRequest) returns (CreateCommentReply);
	rpc UpdateComment (UpdateCommentRequest) returns (UpdateCommentReply);
	rpc DeleteComment (DeleteCommentRequest) returns (DeleteCommentReply);
	rpc ReplyComment (ReplyCommentRequest) returns (ReplyCommentReply);
	rpc GetComment (GetCommentRequest) returns (GetCommentReply);
	rpc BatchGetComment(BatchGetCommentRequest) returns (BatchGetCommentReply);
	rpc ListHotComment (ListCommentRequest) returns (ListCommentReply);
	rpc ListLatestComment (ListCommentRequest) returns (ListCommentReply);
}

message Comment {
	int64 id = 1;
	int64 post_id = 2;
	int64 user_id = 3;
	string content = 4;
	int64 root_id = 5;
	int64 parent_id = 6;
	int32 like_count = 7;
	int32 reply_count = 8;
	int64 score = 9;
	int32 del_flag = 10;
	string created_at = 11;
	string updated_at = 12;
	string device_type = 13;
	string ip = 14;
}

message CreateCommentRequest {
	int64 id = 1;
	int64 post_id = 2;
	int64 user_id = 3;
	string content = 4;
	int64 root_id = 5;
	int64 parent_id = 6;
	int32 like_count = 7;
	int32 reply_count = 8;
	int32 del_flag = 9;
	string device_type = 10;
	string ip = 11;
}
message CreateCommentReply {
	Comment comment = 1;
}

message UpdateCommentRequest {}
message UpdateCommentReply {}

message DeleteCommentRequest {
	int64 id = 1;
	int64 user_id = 2;
	int32 del_flag = 3;
}
message DeleteCommentReply {}

message ReplyCommentRequest {
	int64 comment_id = 1;
	int64 user_id = 2;
	string content = 3;
	int64 root_id = 4;
	int64 parent_id = 5;
	int32 like_count = 6;
	int32 reply_count = 7;
	int32 del_flag = 8;
	string device_type = 9;
	string ip = 10;
}
message ReplyCommentReply {

}

message GetCommentRequest {
	int64 id = 1;
}
message GetCommentReply {
	Comment comment = 1;
}

message BatchGetCommentRequest {
	repeated int64 ids = 1;
}
message BatchGetCommentReply {
	repeated Comment comments = 1;
}

message ListCommentRequest {
	int64 post_id = 1;
	int64 last_id = 2;
	int32 limit = 3;
}
message ListCommentReply {
	repeated Comment items = 1;
	int64 count = 2;
	bool has_more = 3;
	int64 last_id = 4;
}
